<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="weibo">
        <item>新浪微博</item>
        <item>腾讯微博</item>
    </string-array>
    <string-array name="sina_weibo">
        <item>IT_xiao小巫</item>
        <item>不是谁都可以是小巫</item>
    </string-array>
    <string-array name="tencent_weibo">
        <item>小巫</item>
        <item>巫勒个去</item>
    </string-array>
    <!-- 通用 -->
    <string name="app_name">浪腾微博</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty"></string>
    <string name="refresh">刷新</string>
    <string name="back">返回</string>
    <string name="effect">特效</string>
    <string name="remove">删除</string>
    <string name="save">保存</string>
    <string name="cancel_fav">取消收藏</string>
    <string name="comment">评论</string>
    <string name="checking_update">正在检查更新</string>
    <string name="alert">提示</string>
    <string name="question_content_sms">快来使用浪腾微博客户端，感受小巫的魅力！</string>
    <!-- 底部菜单 -->
    <string name="home">微博</string>
    <string name="message">消息</string>
    <string name="selfinfo">个人资料</string>
    <string name="discove">发现</string>
    <string name="more">更多</string>
    <string name="loadinfo">加载中....</string>
    <!-- Oauth2.0授权 -->
    <string name="weibosdk_toast_auth_success">授权成功</string>
    <string name="weibosdk_toast_auth_failed">授权失败</string>
    <string name="weibosdk_toast_auth_canceled">取消授权</string>
    <!-- 新浪微博 -->
    <string name="sina">新浪微博</string>
    <string name="sina_login">新浪微博登录</string>
    <!-- 腾讯微博 -->
    <string name="tencent">腾讯微博</string>
    <string name="tencent_login">腾讯微博登录</string>

    <!-- 首页界面 -->
    <string name="login">登	录</string>
    <string name="change_account">切换帐号</string>

    <!-- 消息界面 -->
    <string name="reply_me">回复我的</string>
    <string name="at_me">\@我的</string>

    <!-- 个人资料界面 -->
    <string name="screen_name">昵称</string>
    <string name="sex">性别</string>
    <string name="friends">关注</string>
    <string name="follows">粉丝</string>
    <string name="location">位置</string>
    <string name="description">描述</string>
    <string name="favorites">收藏</string>
    <string name="weibo">微博</string>
    <string name="zero">0</string>

    <!-- 发送微博界面 -->
    <string name="text_count">140</string>
    <string name="send">发   送</string>
    <string name="talk_something">说点啥呗</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>
    <string name="post_weibo">说点啥呗</string>
    <string name="post_as_comment">同时作为评论发布</string>
    <string name="cb_post_weibo">同时发布一条微博</string>

    <!-- 帐号管理 -->
    <string name="account_manage">帐号管理</string>
    <string name="add_account">添加帐号</string>

    <!-- 升级 -->
    <string name="more_update_msg_3">检查更新失败：无法连接到网络</string>
    <string name="more_update_msg_1">版本已经是最新，不需要升级！</string>
    <string name="banbenshenji">版本升级</string>
    <string name="update_ok">升级</string>
    <string name="register_cancel">取消</string>
    <string name="more_update_msg">检查到最新版本为：V</string>
    <string name="more_update_msg_2">. 是否升级？</string>
    <string name="downlaoding">正在下载中，请稍后</string>
    <string name="url_error">下载地址错误!</string>
    <string name="update_timeout">请求超时，请检查网络状态!</string>
    <string name="tip">提示</string>

</resources>