<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/post_weibo_title_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/title_bg" >

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:background="@drawable/title_back"
        android:textColor="@color/white"
        android:text="@string/back" />

    <TextView
        android:id="@+id/tv_post_weibo_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/post_weibo"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_gravity="right|center_vertical" 
        android:text="@string/send"
        android:textColor="@color/white"
        android:background="@drawable/topbar_bt"/>

</FrameLayout>