<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/weibo_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/tab_rg_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tabbar_background"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_rb_1"
            style="@style/main_tab_bottom"
            android:checked="true"
            android:drawableTop="@drawable/tabbar_home_selector"
            android:tag="tabbar_home"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/tab_rb_2"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabbar_message_selector"
            android:tag="tabbar_message"
            android:text="@string/message" />

        <RadioButton
            android:id="@+id/tab_rb_3"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabbar_selfinfo_selector"
            android:tag="tabbar_selfinfo"
            android:text="@string/selfinfo" />

        <RadioButton
            android:id="@+id/tab_rb_4"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabbar_discove_selector"
            android:tag="tabbar_discove"
            android:text="@string/discove" />
    </RadioGroup>

    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0"
             />
    </android.support.v4.app.FragmentTabHost>

</LinearLayout>