<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/realtabcontent"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="-10.0dip"
        android:background="@drawable/maintab_toolbar_bg"
        android:paddingLeft="7.0dip"
        android:paddingRight="7.0dip" >

        <RadioGroup
            android:id="@+id/tab_rg_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/tab_rb_1"
                style="@style/main_tab_bottom2"
                android:checked="true"
                android:drawableTop="@drawable/tabs_home"
                android:tag="tabbar_home"
                android:text="@string/home" />

            <RadioButton
                android:id="@+id/tab_rb_2"
                style="@style/main_tab_bottom2"
                android:drawableTop="@drawable/tabs_message"
                android:tag="tabbar_message"
                android:text="@string/message" />

            <RadioButton
                android:id="@+id/tab_rb_3"
                style="@style/main_tab_bottom2"
                android:drawableTop="@drawable/tabs_selfinfo"
                android:tag="tabbar_selfinfo"
                android:text="@string/selfinfo" />

            <RadioButton
                android:id="@+id/tab_rb_4"
                style="@style/main_tab_bottom2"
                android:drawableTop="@drawable/tabs_more"
                android:tag="tabbar_more"
                android:text="@string/more" />
        </RadioGroup>

        <TextView
            android:id="@+id/message_mention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left|center"
            android:layout_marginLeft="115.0dip"
            android:layout_marginTop="-5.0dip"
            android:background="@drawable/message_tips"
            android:gravity="center"
            android:text=""
            android:textColor="#ffffffff"
            android:textSize="13.0sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/message_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left|center"
            android:layout_marginLeft="190.0dip"
            android:layout_marginTop="-5.0dip"
            android:background="@drawable/message_tips"
            android:gravity="center"
            android:text=""
            android:textColor="#ffffffff"
            android:textSize="13.0sp"
            android:visibility="gone" />
    </FrameLayout>

    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />
    </android.support.v4.app.FragmentTabHost>
</LinearLayout>