<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/update_top"
        android:layout_width="fill_parent"
        android:layout_height="36dip"
        >
        <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:singleLine="true"
           android:layout_centerHorizontal="true"
           android:layout_centerVertical="true"
           android:text="@string/banbenshenji"
           android:textSize="20sp" />
     </RelativeLayout>
   
     <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp" 
        android:textColor="#232222"/>
     <TextView
        android:id="@+id/change_reson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="4.6dp"
        android:textSize="16sp" 
        android:textColor="#232222"/>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dip"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button 
        	 android:id="@+id/update_ok"
        	 android:layout_width="122.3dip"
        	 android:layout_height="wrap_content"
        	 android:text="@string/update_ok"
        	 android:textColor="#ffffff"
        	 android:textSize="16sp"
        	 android:layout_weight="1"
        	 android:background="@drawable/dialog_okbutton"/>
        <Button 
        	 android:id="@+id/update_cancel"
        	 android:layout_width="122.3dip"
        	 android:layout_height="wrap_content"
        	 android:layout_weight="1"
        	 android:layout_marginLeft="10dip"
        	 android:text="@string/register_cancel"
        	 android:textColor="#ffffff"
        	 android:textSize="16sp"
        	 android:background="@drawable/dialog_cancelbtn"
        	 />
        </LinearLayout>
</LinearLayout>