<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <Button
            android:id="@+id/backBtn"
            style="@style/comm_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:background="@drawable/title_back"
            android:text="@string/back"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/titel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/account_manage"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/weibo_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/wb_account_change"
        android:paddingLeft="2dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/account_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:divider="@null"
            android:dividerHeight="5dp" />

        <Button
            android:id="@+id/add_account"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/green_btn_selector"
            android:text="@string/add_account"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </FrameLayout>

</LinearLayout>