<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <FrameLayout
            android:id="@+id/icon_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/iv_head"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/empty"
                android:background="@color/white"
                android:src="@drawable/avatar_default" />

            <ImageView
                android:id="@+id/iv_verified"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="right|bottom"
                android:contentDescription="@string/empty"
                android:focusable="false"
                android:src="@drawable/v"
                android:visibility="gone" />
        </FrameLayout>

        <Spinner
            android:id="@+id/weibo_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_screen_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/wb_account_change"
            android:paddingLeft="2dp" />

        <Spinner
            android:id="@+id/account_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/weibo_spinner"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/wb_account_change"
            android:paddingLeft="2dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_above="@+id/account_manage"
            android:background="@drawable/common_card_background_selector"
            android:text="@string/change_account"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/account_manage"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/blue"
            android:background="@drawable/common_card_background_selector"
            android:text="@string/account_manage"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_layout"
            android:layout_centerHorizontal="true"
            android:text="使用微博登录"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/title_text_size"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>