<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <include layout="@layout/single_weibo_viewer_title" />

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/single_weibo_viewer_content" />

    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/toolbar_bg_middle"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toolbar_btn"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/toolbar_btn_width"
                android:layout_height="@dimen/toolbar_btn_width"
                android:layout_gravity="center_horizontal"
                android:clickable="false"
                android:src="@drawable/toolbar_comment_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/comment"
                android:textColor="@color/toolbar_btn_text_color"
                android:textSize="@dimen/toolbar_btn_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_forward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toolbar_btn"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/toolbar_btn_width"
                android:layout_height="@dimen/toolbar_btn_width"
                android:layout_gravity="center_horizontal"
                android:clickable="false"
                android:src="@drawable/toolbar_forward_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="转发"
                android:textColor="@color/toolbar_btn_text_color"
                android:textSize="@dimen/toolbar_btn_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toolbar_btn"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/toolbar_btn_width"
                android:layout_height="@dimen/toolbar_btn_width"
                android:layout_gravity="center_horizontal"
                android:clickable="false"
                android:src="@drawable/toolbar_fav_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/favorites"
                android:textColor="@color/toolbar_btn_text_color"
                android:textSize="@dimen/toolbar_btn_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_unfav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toolbar_btn"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="@dimen/toolbar_btn_width"
                android:layout_height="@dimen/toolbar_btn_width"
                android:layout_gravity="center_horizontal"
                android:clickable="false"
                android:src="@drawable/toolbar_unfav_icon" />

            <TextView
                android:id="@+id/tv_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/cancel_fav"
                android:textColor="@color/toolbar_btn_text_color"
                android:textSize="@dimen/toolbar_btn_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>